--- a/pclviewer.ui
+++ b/pclviewer.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1180</width>
-    <height>628</height>
+    <width>1184</width>
+    <height>632</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -54,15 +54,51 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QCheckBox" name="useFile">
+           <property name="text">
+            <string>Use file as source</string>
+           </property>
+          </widget>
+         </item>
         </layout>
-        <zorder>startPushbutton</zorder>
-        <zorder>startPushbutton</zorder>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>250</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="title">
+         <string>Export</string>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+          <widget class="QPushButton" name="exportButton">
+           <property name="text">
+            <string>Export objects on table</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_3">
         <item row="0" column="0">
          <widget class="QTreeWidget" name="treeWidget">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -72,7 +108,7 @@
           <property name="minimumSize">
            <size>
             <width>250</width>
-            <height>0</height>
+            <height>250</height>
            </size>
           </property>
           <property name="maximumSize">
@@ -87,6 +123,19 @@
            </property>
           </column>
          </widget>
+        </item>
+        <item row="1" column="0">
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
